sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: not found: value e
      while (j>0 && !plusPetitQue(j-e,v)) {
                                    ^AlgShellSort:11: error: not found: value e
        copie(j-e,j);
                ^AlgShellSort:12: error: not found: value e
        j=j-e
            ^